# DiscordBinanceTradingBot

./: .env  .env.example  Cargo.toml  README.md  diesel.toml  ecosystem.config.js  package.json
bots_proc_macros/: Cargo.toml
bots_proc_macros/src/: lib.rs
command_macros/: Cargo.toml
command_macros/src/: lib.rs
diesel_patches/: schema.patch
migrations/2023-02-21-153006_create_users/: up.sql
migrations/2023-02-21-192315_create_config/: up.sql
migrations/2023-02-23-160541_reservations/: down.sql  up.sql
migrations/2023-02-27-024705_clock_stub/: down.sql  up.sql
migrations/2023-02-27-024801_binance_accounts/: down.sql  up.sql
migrations/2023-03-01-233046_transactions/: up.sql
migrations/2023-03-08-205326_timezone/: down.sql  up.sql
migrations/2023-03-13-204716_afk_flags/: down.sql  up.sql
src/: binance_wrapped.rs  config.rs  db.rs  error.rs  event_handler.rs  interval_handler.rs  main.rs  models.rs  schedule.rs  schema.rs
src/commands/: mod.rs
src/commands/config/: account.rs  create_user.rs  help.rs  list_config.rs  mod.rs  set_config.rs  status.rs
src/commands/schedule/: clock.rs  mod.rs  reservations.rs  reserve.rs  summary.rs  unlock.rs
src/commands/trading/: auto_buy.rs  balance.rs  buy.rs  cancel.rs  mod.rs  orders.rs  price.rs  sell.rs
src/ops/: config_ops.rs  mod.rs  user_ops.rs
src/utils/: get_option.rs  message.rs  mod.rs
