[package]
name = "upwork_reda_shadi_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11.5", default-features = false, features = ["client","builder", "gateway", "rustls_backend", "model","collector","cache"] }
binance = "0.20.2"
dotenv = "0.15.0"
diesel = { version = "2.0.0",  features = ["sqlite","chrono","returning_clauses_for_sqlite_3_35"] }
tracing = {version="0.1"}
tracing-subscriber = {version="0.3",features=[
    'env-filter'
]}
thiserror = "1.0.38"
arc-swap = "1.6.0"
plotters = "0.3.3"
chrono = "*"
clokwerk = "0.4.0"
anyhow = {version="1.0.69",features = ["backtrace"]}
chrono-tz = "0.8.1"
